deployment/inventory-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"

    # # add an annotation indicating the issuer to use.
    cert-manager.io/issuer: my-ca-issuer
    cert-manager.io/common-name: movies.com

spec:
 
  rules:
    - host: movies.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inventory-ui-service
                port:
                  number: 8888

          - path: /movies
            pathType: Prefix
            backend:
              service:
                name: inventory-api-service
                port:
                  number: 8081
          

  # TLS config using openssl
  # tls:
  #   - secretName: my-tls-secret
  #     hosts:
  #       - movies.com  



  # TLS config using cert manager
  tls: 
  - hosts:
    - movies.com
    secretName: myingress-cert #  cert-manager will store the created certificate in this secret.
